tests/ui/static_ref.stderr
error[E0521]: borrowed data escapes outside of function
 --> tests/ui/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^^
  | |
  | `py` is a reference that is only valid in the function body
  | `py` escapes the function body here
  | lifetime `'py` defined here
  | argument requires that `'py` must outlive `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `output[_]` does not live long enough
 --> tests/ui/static_ref.rs:4:1
  |
4 | #[pyfunction]
  | ^^^^^^^^^^^^-
  | |           |
  | |           `output[_]` dropped here while still borrowed
  | borrowed value does not live long enough
  | argument requires that `output[_]` is borrowed for `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `holder_0` does not live long enough
 --> tests/ui/static_ref.rs:5:15
  |
4 | #[pyfunction]
  | -------------
  | |           |
  | |           `holder_0` dropped here while still borrowed
  | binding `holder_0` declared here
  | argument requires that `holder_0` is borrowed for `'static`
5 | fn static_ref(list: &'static Bound<'_, PyList>) -> usize {
  |               ^^^^^^^ borrowed value does not live long enough

error[E0521]: borrowed data escapes outside of function
 --> tests/ui/static_ref.rs:9:1
  |
9 | #[pyfunction]
  | ^^^^^^^^^^^^^
  | |
  | `py` is a reference that is only valid in the function body
  | `py` escapes the function body here
  | lifetime `'py` defined here
  | argument requires that `'py` must outlive `'static`
  |
  = note: this error originates in the attribute macro `pyfunction` (in Nightly builds, run with -Z macro-backtrace for more info)
